--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!-- Write your HTML in this file -->
 <!doctype HTML>
+<html>
 <head>
   <title>test</title>
 </head>
 <body>
   <a href=https://www.kodewithklossy.com/>Kode With Klossy</a>
 </body>
+</html>
