--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>test</title>
 </head>
 <body>
-  <a href=https://www.kodewithklossy.com/>Kode With Klossy</a>
+  <a href=https://www.kodewithklossy.com/>Kode with Klossy</a>
 </body>
 </html>
